RESOLVED FIXED297411
REGRESSION(298547@main): [ macOS wk2 ] http/tests/media/media-stream/get-display-media-prompt.html is a flaky text failure
https://bugs.webkit.org/show_bug.cgi?id=297411
Summary REGRESSION(298547@main): [ macOS wk2 ] http/tests/media/media-stream/get-disp...
Bryan Medina
Reported 2025-08-14 12:22:49 PDT
http/tests/media/media-stream/get-display-media-prompt.html is a flaky text failure on macOS wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fmedia%2Fmedia-stream%2Fget-display-media-prompt.html TEXT DIFF: --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/tests/media/media-stream/get-display-media-prompt-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/tests/media/media-stream/get-display-media-prompt-actual.txt @@ -21,7 +21,7 @@ PASS stream.getVideoTracks().length is 1 ** Request a stream with 'max' constraints, the user should not be prompted ** -PASS numberOfTimesGetUserMediaPromptHasBeenCalled() is 0 +FAIL numberOfTimesGetUserMediaPromptHasBeenCalled() should be 0. Was 1. PASS stream is undefined. PASS err instanceof Error is true PASS err.name is "TypeError" TEXT DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/298680%40main%20(4097)/http/tests/media/media-stream/get-display-media-prompt-diff.txt
Attachments
Bryan Medina
Comment 1 2025-08-14 12:23:54 PDT
I was able to reproduce the text failure locally on my device running macOS Sequoia Release ToT using the following command: run-webkit-tests http/tests/media/media-stream/get-display-media-prompt.html --iterations=5
Radar WebKit Bug Importer
Comment 2 2025-08-14 12:28:28 PDT
EWS
Comment 3 2025-08-14 12:37:12 PDT
Test gardening commit 298696@main (7e0d2ba91286): <https://commits.webkit.org/298696@main> Reviewed commits have been landed. Closing PR #49402 and removing active labels.
Bryan Medina
Comment 4 2025-08-14 15:02:06 PDT
It seems to me that the regression point is at 298547@main, since that is where the test started failing and when changes were made to get-display-media tests.
youenn fablet
Comment 5 2025-08-18 01:40:46 PDT
EWS
Comment 6 2025-08-19 03:19:30 PDT
Committed 298885@main (ed0423319e88): <https://commits.webkit.org/298885@main> Reviewed commits have been landed. Closing PR #49525 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.