REGRESSION(298547@main): [ macOS wk2 ] http/tests/media/media-stream/get-display-media-prompt.html is a flaky text failure https://bugs.webkit.org/show_bug.cgi?id=297411 rdar://158343702

Reviewed by Charlie Wolfe.

The test change revealed a potential race condition between InjectedBundle::resetUserMediaPermissionRequestCount and InjectedBundle::userMediaPermissionRequestCount, since one is using synchronous IPC and not the other.
We are making use of synchronous IPC for both of them to remove that race.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::resetUserMediaPermissionRequestCount):
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):
(WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):

Canonical link: https://commits.webkit.org/298885@main