Tools/WebKitTestRunner/TestInvocation.cpp
@@ -458,11 +458,6 @@ void TestInvocation::didReceiveMessageFromInjectedBundle(WKStringRef messageName
         return;
     }
 
-    if (WKStringIsEqualToUTF8CString(messageName, "ResetUserMediaPermissionRequestCount")) {
-        TestController::singleton().resetUserMediaPermissionRequestCount();
-        return;
-    }
-
     if (WKStringIsEqualToUTF8CString(messageName, "SetCustomPolicyDelegate")) {
         auto messageBodyDictionary = dictionaryValue(messageBody);
         auto enabled = booleanValue(messageBodyDictionary, "enabled");
@@ -999,6 +994,11 @@ WKRetainPtr<WKTypeRef> TestInvocation::didReceiveSynchronousMessageFromInjectedB
 
     if (WKStringIsEqualToUTF8CString(messageName, "UserMediaPermissionRequestCount"))
         return adoptWK(WKUInt64Create(TestController::singleton().userMediaPermissionRequestCount()));
+
+    if (WKStringIsEqualToUTF8CString(messageName, "ResetUserMediaPermissionRequestCount")) {
+        TestController::singleton().resetUserMediaPermissionRequestCount();
+        return nullptr;
+    }
 
     if (WKStringIsEqualToUTF8CString(messageName, "GrantNotificationPermission")) {
         WKPageSetPermissionLevelForTesting(TestController::singleton().mainWebView()->page(), stringValue(messageBody), true);
